// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink active NavLink renders correctly 1`] = `
<Link
  className="nav-link nav-text active"
  key="{props.key}"
  onClick={[Function]}
  replace={false}
  to="/sign-in"
>
  Sign In
</Link>
`;

exports[`NavLink brand NavLink renders correctly 1`] = `
<Link
  className="logo-and-title"
  key="{props.key}"
  onClick={[Function]}
  replace={false}
  to="/"
/>
`;

exports[`NavLink inactive NavLink renders correctly 1`] = `
<Link
  className="nav-link nav-text "
  key="{props.key}"
  onClick={[Function]}
  replace={false}
  to="/sign-in"
>
  Sign In
</Link>
`;
